# Embedded

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  params.json
Hardware/: FSM_template.sv
Hardware/Synchronizer/: async_reset_synchronizer.sv  synchronizer.svh  toggle_synchronizer.sv
Hardware/usb4fun/RS232_Loop/: Makefile  RS232_Loop.c
Hardware/usb4fun/WinUSB/WinUSB_RS232_Demo/: WinUSB_RS232_Demo.cpp  WinUSB_RS232_Demo.sln  WinUSB_RS232_Demo.vcxproj  WinUSB_RS232_Demo.vcxproj.filters
Hardware/usb4fun/WinUSB/install_disk/: USB_RS232_WINUSB.inf
Hardware/usb4fun/include/: RS232_Loop_usb_config.h  USB_CDC.h  usb_common.h
Hardware/usb4fun/inf/: USB_RS232.inf
Labs/: lab_run_elf.sh  link_script01.x  link_script02.x  lost.c  mult_neg.cpp  no_volatile.c  register_volatile.c  volatile.c
Math/: CORDIC.c  CORDIC.h  SConstruct  test_main.c
Software/C/auto_register/: auto.c  register.c
Software/C/volatile/: no_volatile.c  register_volatile.c  volatile.c  volatile_positions.c
Software/CPP/: Atom_Operation.cpp  Func_Obj_Lambda.cpp  Func_Template_Operator_Overloading.cpp  Function_Pointer.c  Gen_Lookup_Table.cpp
Software/build_process/BJAM/: Jamroot.jam
Software/build_process/BJAM/align/: Jamfile.jam
Software/build_process/BJAM/common/: Jamfile.jam  about.c
Software/build_process/BJAM/common/include/: about.h  debug.h
Software/build_process/BJAM/main/: Jamfile.jam  main.c
Software/build_process/BJAM/state_machine/: Jamfile.jam  state_machine.c  state_machine.h
Software/build_process/CMake/: CMakeLists.txt  README.md
Software/build_process/CMake/align/: CMakeLists.txt  align.h
Software/build_process/CMake/common/: CMakeLists.txt
Software/build_process/CMake/common/include/: about_CRC32.h
Software/build_process/CMake/main/: CMakeLists.txt  main.c
Software/build_process/CMake/state_machine/: CMakeLists.txt
Software/build_process/Make/: Config.in  Makefile  Makefile_Dependency  Makefile_Recursive  Makefile_Simple  Rules.mak
Software/build_process/Make/align/: Makefile  Makefile_Test  align.c  test_main.c
Software/build_process/Make/common/: CRC32.d  Makefile  Makefile_Test  about.c  about.d  about_sig_CRC32.pl  test_main.c
Software/build_process/Make/common/include/: CRC32.h  about.h  about_CRC32.h  common_type.h  debug.h
Software/build_process/Make/config/: Makefile
Software/build_process/Make/main/: Makefile  main.c  main.d
Software/build_process/Make/state_machine/: Makefile  Makefile_Test  state_machine.c  state_machine.d  test_main.c
Software/build_process/SCons/: SConstruct
Software/build_process/SCons/align/: SConscript  align.c  align.h
Software/build_process/SCons/common/: CRC32.c  SConscript  about.c  about_sig_CRC32.pl
Software/build_process/SCons/common/include/: CRC32.h  about.h  about_CRC32.h  common_type.h  debug.h
Software/build_process/SCons/main/: SConscript  main.c
Software/build_process/SCons/state_machine/: SConscript  state_machine.h
Software/build_process/SCons/table_gen/: Gen_Lookup_Table.cpp  SConscript
Software/build_process/auto_tool_demo/: Makefile.am  README  configure.ac  run_me.sh
Software/build_process/auto_tool_demo/src/align/: align.c  align.h
Software/build_process/auto_tool_demo/src/common/: about.c
Software/build_process/auto_tool_demo/src/common/include/: about.h  about_CRC32.h  common_type.h  debug.h
Software/build_process/auto_tool_demo/src/main/: main.c
Software/build_process/auto_tool_demo/src/state_machine/: state_machine.c  state_machine.h
Software/usb4fun/RS232_Loop/: Makefile  RS232_Loop.c  delay.c  discon.c
Software/usb4fun/WinUSB/WinUSB_RS232_Demo/: WinUSB_RS232_Demo.cpp  WinUSB_RS232_Demo.sln  WinUSB_RS232_Demo.vcxproj  WinUSB_RS232_Demo.vcxproj.filters
Software/usb4fun/WinUSB/install_disk/: USB_RS232_WINUSB.inf
Software/usb4fun/include/: RS232_Loop_usb_config.h  USB_CDC.h  usb_common.h
Software/usb4fun/inf/: USB_RS232.inf
Tools/: wordfile_C54x.txt  wordfile_spice.txt
Tools/lineWidth/: Makefile  lineWidth.c
Tools/scripts/perl/: dir_dig.pl
Tools/scripts/python/: about_print.txt  line_switch.py  logo.txt  logo_print.py  sample2wav.py  wav2sample.py
Tools/scripts/tcl/: assert.tcl  bin_file_proc.tcl  wav_file_proc.tcl
Tools/tab/: Makefile  tab.c
stylesheets/: stylesheet.css
