AC_INIT(auto_tool_demo, 1.0, www.pulserain.com)
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

 
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
